# agentsync

./: .gitignore  .golangci.yml  MANUAL.md  README.md  flake.nix  go.mod  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.just/test/: Justfile
.zed/: settings.json
apps/agentsync/: .gitignore  main.go  pyproject.toml
apps/agentsync/internal/agentvendor/: port.go  service.go  systemconfig.go  types.go  vendor.go
apps/agentsync/internal/agentvendor/adapter/: systemconfig.go
apps/agentsync/internal/agentvendor/adapters/: systemconfig.go
apps/agentsync/internal/cli/: root.go  sync.go  sysprompt.go
apps/agentsync/internal/config/: port.go  types.go
apps/agentsync/internal/config/adapter/: toml_config.go
apps/agentsync/internal/maininstructions/: instructions.go
apps/agentsync/internal/sync/: port.go  request.go  usecase.go  usecase_test.go
apps/agentsync/internal/sysprompt/: usecase.go
apps/agentsync/internal/systemprompt/: types.go
apps/agentsync/internal/systemprompt/adapter/: agent_writer.go  fs_store.go
apps/agentsync/src/agentsync/: cli.py
apps/agentsync/src/agentsync/agent_vendor/: models.py  service.py
apps/agentsync/src/agentsync/agent_vendor/adapters/: system_configuration_adapter.py
apps/agentsync/src/agentsync/agent_vendor/ports/: configuration.py
apps/ponte/: main.go
apps/ponte/internal/cli/: content.go  (+10 more)
nix/: devtools.nix  go.nix  package.nix  python.nix
tests/e2e/: gc_test.go  harness_test.go  init_test.go  main_test.go  query_test.go  status_test.go  subagents_test.go  sync_test.go  sysprompt_test.go
(+29 files in other folders)
