[project]
name = "agentsync"
version = "0.1.0"
description = "CLI to sync skills and instructions for AI agent vendors"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15.0",
]

[project.scripts]
agentsync = "agentsync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsync"]
